<?xml version="1.0" encoding="utf-8"?>
<!--
    2011 Foxykeep (http://datadroid.foxykeep.com)
    Licensed under the Beerware License : 
    As long as you retain this notice you can do whatever you want with this stuff. If we meet some 
    day, and you think this stuff is worth it, you can buy me a beer in return
-->
<resources>

    <string name="app_name">DataDroid PoC</string>

    <!-- Dialog texts -->
    <string name="dialog_error_connection_error_title">Connexion error</string>
    <string name="dialog_error_connection_error_message">A connexion error occurred. Please verify
        that you are connected to an Edge, 3G or Wifi network.</string>
    <string name="dialog_error_data_error_title">Incorrect data</string>
    <string name="dialog_error_data_error_message">Received data is invalid.</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_button_retry">Retry</string>
    <string name="progress_dialog_title">Loading</string>
    <string name="progress_dialog_message">Loading in progress…</string>

    <!-- HomeActivity texts -->
    <string name="home_person_list_title">Person List (DB)</string>
    <string name="home_person_list_description">This sample shows you the difference
        between XML and JSON webservices calls.\n\nThe data is stored in a SQLite database through
        a ContentProvider.</string>
    <string name="home_city_list_title">City List (Memory)</string>
    <string name="home_city_list_description">This sample shows you how to make a webservice
        without a database by saving the data in memory.</string>
    <string name="home_crud_phone_list_sync_title">Phones (CRUD)</string>
    <string name="home_crud_phone_list_sync_description">This sample shows you a full CRUD
        (Create / Read / Update / Delete) model. The data is only managed on the server.
        \n\nThe data set you have in the application is only for you so you can modify it as you
        want.</string>
    <string name="home_double_list_title">Double List</string>
    <string name="home_double_list_description">This sample shows you how to manage 2 webservices
        either just in the same Activity or called at the same time.\n\nAlso one of them uses
        a ProgressDialog while the other uses a ProgressBar in the ActionBar.</string>
    <string name="home_request_types_title">Request Types</string>
    <string name="home_request_types_description">This sample shows you an example using the
        different type of requests available (GET, POST, PUT, DELETE)\nCheck ComputeSquareOperation
        for more information.</string>
    <string name="home_authentication_title">Authentication</string>
    <string name="home_authentication_description">This sample shows you how to use the basic HTTP
        authentication in a WS call.\nCheck AuthenticationOperation for more information.</string>
    <string name="home_refresh_title">Refresh</string>
    <string name="home_refresh_description">In this sample, we don\'t have a
        ConnectionErrorDialogFragment when the connection fails but instead there is a refresh
        action bar/menu element and an message displayed if we don\'t have data.\n\n
        This allows you to see how to manage if it you don\'t want to show a dialog to the
        user when you have a connection/data failure.</string>
    <string name="home_custom_request_exception_title">Custom Exception</string>
    <string name="home_custom_request_exception_description">This sample shows what you can do and
        how to use the CustomRequestException.</string>
    <string name="home_rss_feed_title">Rss Feed</string>
    <string name="home_rss_feed_description">This sample shows you how to use the RSS Feed parser
        provided with the DataDroid sample application if you want to display a RSS Feed in your
        application.</string>
    <string name="home_tv_sample_description_hint">Long press on a sample name to show a
        description</string>
    <string name="home_tv_source_code">The source code of the DataDroid library as well as this
        example app is available on Github :\nhttps://github.com/foxykeep/datadroid</string>

    <!-- PersonListActivity texts -->
    <string name="person_list_title">DataDroid PoC > Person List (DB)</string>
    <string name="person_list_sp_return_format_prompt">Webservice return format</string>
    <string name="person_list_b_load">Load</string>
    <string name="person_list_b_clear_db">Clear DB</string>
    <string name="person_list_tv_empty">0 person found</string>
    <string name="person_list_item_tv_age_format">%1$d yrs old</string>

    <!-- CityListActivity texts -->
    <string name="city_list_title">DataDroid PoC > City List (Memory)</string>
    <string name="city_list_b_load">Load</string>
    <string name="city_list_b_clear_memory">Clear memory</string>
    <string name="city_list_tv_empty">0 city found</string>

    <!-- DoubleListActivity texts -->
    <string name="double_list_title">Double List</string>
    <string name="double_list_b_load_top">Load Top</string>
    <string name="double_list_b_load_bottom">Load Bottom</string>
    <string name="double_list_b_load_both">Load Both</string>
    <string name="double_list_tv_empty">0 city found</string>

    <!-- AuthenticationActivity texts -->
    <string name="authentication_title">DataDroid PoC > Authentication</string>
    <string name="authentication_b_load">Without authentication</string>
    <string name="authentication_b_load_with_authentication">With authentication</string>

    <!-- RefreshActivity texts -->
    <string name="refresh_title">DataDroid PoC > Refresh</string>
    <string name="refresh_tv_loading">Loading cities…</string>
    <string name="refresh_tv_empty">0 city found</string>
    <string name="refresh_menu_refresh">Refresh</string>

    <!-- CustomRequestException texts -->
    <string name="custom_request_exception_title">DataDroid PoC > CustomRequestException</string>
    <string name="custom_request_exception_b_without_exception">Without Exception</string>
    <string name="custom_request_exception_b_with_exception">With Exception</string>
    <string name="custom_request_exception_tv_empty">0 city found</string>

    <!-- CrudSyncPhoneListActivity and CrudAsyncPhoneListActivity texts -->
    <string name="crud_phone_list_tv_empty_loading">Loading …</string>
    <string name="crud_phone_list_tv_empty_no_results">0 phone found</string>
    <string name="crud_phone_list_menu_add">Add</string>
    <string name="crud_phone_list_menu_delete_all">Delete all</string>
    <string name="crud_phone_list_context_menu_edit">Edit</string>
    <string name="crud_phone_list_context_menu_delete">Delete</string>
    <string name="crud_phone_list_dialog_delete_all_confirm_title">Delete all</string>
    <string name="crud_phone_list_dialog_delete_all_confirm_message">All the phones will be
        deleted.</string>
    <string name="crud_phone_list_dialog_delete_confirm_title">Delete</string>
    <string name="crud_phone_list_dialog_delete_confirm_message">%1$s will be deleted.</string>

    <!-- CrudSyncPhoneListActivity texts -->
    <string name="crud_sync_phone_list_title">DataDroid PoC > Phones (CRUD) (Sync)</string>

    <!-- CrudSyncPhoneViewActivity and CrudAsyncPhoneViewActivity texts -->
    <string name="crud_phone_view_tv_android_version">Android version</string>
    <string name="crud_phone_view_tv_screen_size">Screen size</string>
    <string name="crud_phone_view_tv_screen_size_format">%1$.1f</string>
    <string name="crud_phone_view_tv_price">Price</string>
    <string name="crud_phone_view_tv_price_format">%1$d $</string>
    <string name="crud_phone_view_menu_edit">Edit</string>
    <string name="crud_phone_view_menu_delete">Delete</string>
    <string name="crud_phone_view_dialog_delete_confirm_title">Delete</string>
    <string name="crud_phone_view_dialog_delete_confirm_message">%1$s will be deleted.</string>

    <!-- CrudSyncPhoneViewActivity texts -->
    <string name="crud_sync_phone_view_title">DataDroid PoC > View phone (CRUD) (Sync)</string>

    <!-- CrudSyncPhoneAddEditActivity and CrudAsyncPhoneAddEditActivity -->
    <string name="crud_phone_add_edit_tv_name">Name :</string>
    <string name="crud_phone_add_edit_tv_manufacturer">Manufacturer :</string>
    <string name="crud_phone_add_edit_tv_android_version">Android version :</string>
    <string name="crud_phone_add_edit_tv_screen_size">Screen size :</string>
    <string name="crud_phone_add_edit_tv_price">Price :</string>
    <string name="crud_phone_add_edit_b_submit">Submit</string>

    <!-- CrudSyncPhoneAddEditActivity texts -->
    <string name="crud_sync_phone_add_title">DataDroid PoC > New phone (CRUD) (Sync)</string>
    <string name="crud_sync_phone_edit_title">DataDroid PoC > Edit phone (CRUD) (Sync)</string>

    <!-- RssFeedListActivity texts -->
    <string name="rss_feed_list_title">DataDroid PoC > RSS Feed</string>
    <string name="rss_feed_list_b_load">Load</string>
    <string name="rss_feed_list_b_clear_memory">Clear memory</string>
    <string name="rss_feed_list_sp_url_prompt">Feed URL</string>

    <!-- RequestTypesActivity texts -->
    <string name="request_types_title">DataDroid PoC > Request types</string>
    <string name="request_types_sp_request_type_prompt">Request method</string>
    <string name="request_types_b_load">Load</string>
    <string name="request_types_tv_empty">Enter a number and press Load to compute its
        square value.</string>
    <string name="request_types_tv_result_format">The square value is: %1$d</string>
    <string name="request_types_et_number_default_value">0</string>

</resources>