<?xml version="1.0" encoding="utf-8"?>
<!--
    2011 Foxykeep (http://datadroid.foxykeep.com)
    Licensed under the Beerware License : 
    As long as you retain this notice you can do whatever you want with this stuff. If we meet some 
    day, and you think this stuff is worth it, you can buy me a beer in return
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crud_phone_add_edit_tv_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/crud_phone_add_edit_tv_manufacturer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/et_manufacturer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/crud_phone_add_edit_tv_android_version"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/et_android_version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/crud_phone_add_edit_tv_screen_size"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/et_screen_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/crud_phone_add_edit_tv_price"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <Button
            android:id="@+id/b_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:enabled="false"
            android:text="@string/crud_phone_add_edit_b_submit" />

    </LinearLayout>

</ScrollView>