<?xml version="1.0" encoding="utf-8"?>
<!--
     2011 Foxykeep (http://datadroid.foxykeep.com) Licensed under the Beerware 
	License : As long as you retain this notice you can do whatever you want 
	with this stuff. If we meet some day, and you think this stuff is worth it, 
	you can buy me a beer in return
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <Spinner
        android:id="@+id/sp_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/rss_feed_name"
        android:prompt="@string/rss_feed_list_sp_url_prompt" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/b_load"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/rss_feed_list_b_load" />

        <Button
            android:id="@+id/b_clear_memory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/rss_feed_list_b_clear_memory" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>